--- a/css/style.css
+++ b/css/style.css
@@ -852,7 +852,7 @@ p {
   margin: 0;
   padding: 15px;
   width: 358px;
-  color: var(--background-color);
+  color: var(--wite-color);
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
